<resources>
    <string name="app_name">TechLife</string>
    <string name="bienvenido">Welcome</string>
    <string name="entrar_como_ong">Entrar como Ong</string>
    <string name="entrar_como_voluntario">Entrar como voluntario</string>
    <string name="entrar_a_foro_ong">Foro</string>
    <string name="proyectos_ong">Proyectos</string>
    <string name="postulantes_proyecto">Postulantes</string>
    <string name="perfil_ong">Perfil</string>
    <string name="entrar_a_foro_voluntario">Foro</string>
    <string name="proyectos_voluntario">Buscar Proyectos</string>
    <string name="horarios_voluntario">Horarios</string>
    <string name="perfil_voluntario">Perfil</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="dni">DNI</string>
    <string name="usuario_1">Usuario 1</string>
    <string name="_74693038">74693038</string>
    <string name="telefono">Telefono:</string>
    <string name="xxxxxxxxxxxxxxxxxxxxxxxxxxxx">xxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="_21_12_1996">21/12/1996</string>
    <string name="_992010047">992010047</string>
    <string name="direccion">Direccion:</string>
    <string name="joshua_andres_cartagena_quipas">Joshua Andres Cartagena Quipas</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos:</string>
    <string name="correo">Correo:</string>
    <string name="u201415040_upc_edu_pe">u201822206@upc.edu.pe</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="separador_horas">|</string>
    <string name="cancelar">Cancel</string>
    <string name="save">Save</string>

























</resources>