<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="127dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/leaf" />

    <TextView
        android:id="@+id/tvAppName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btForoVoluntario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="#7fa208"
        android:text="@string/entrar_a_foro_voluntario"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName3" />

    <Button
        android:id="@+id/btProyectosVoluntario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#7fa208"
        android:text="@string/proyectos_voluntario"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btForoVoluntario" />

    <Button
        android:id="@+id/btHorariosPostulante"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#7fa208"
        android:text="@string/horarios_voluntario"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btProyectosVoluntario" />

    <Button
        android:id="@+id/btPerfilVoluntario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="#7fa208"
        android:text="@string/perfil_voluntario"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btHorariosPostulante" />

</androidx.constraintlayout.widget.ConstraintLayout>